<resources>

    <string name="app_name">Transport</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="info">Kollektivavtalen upprättas mellan fackförbund och arbetsgivarorganisationer och styr din lön och en rad andra regler på arbetsplatsen. </string>



    <string name="info2">De ger dig rätt till ersättning för övertid och OB, semesterersättning, rimliga arbetstider med mera.</string>
    <string name="info3">Men det är bara miniminivåerna – golvet – som slås fast i avtalet, det kan alltså inte försämra villkoren, bara förbättra.</string>

    <string name="info4"> Kollektivavtalet garanterar också att du är försäkrad om du blir sjuk, om du skadas i arbetet eller blir av med jobbet.</string>
    <string name="info5"> Dessutom kan det finnas regler om sådant som utbildning, jämställdhet och frågor som är speciella för just din bransch.</string>
    <string name="info6"> Alla företag är inte anslutna till en arbetsgivarorganisation. De kan istället teckna ett avtal direkt med facket, ett så kallat hängavtal.</string>


    <string name="info7"> I många andra länder är det lagar och förordningar som styr arbetsvillkor och löner. </string>
    <string name="info7b">Det kan verka enklare, men har visat sig leda till lägre ingångslöner och sämre villkor än i Sverige och ett fåtal andra länder som reglerar dessa frågor i kollektivavtal.</string>
    <string name="info8">Men det gäller att alla arbetsplatser har kollektivavtal för att vår modell ska fungera. </string>
    <string name="info8b"> Det är därför fackets viktiga uppgift att bevaka arbetsmarknaden och teckna avtal med alla arbetsgivare.</string>
    <string name="info8c"> Vi har också laglig rätt att vidta stridsåtgärder mot företag som vägrar.</string>
    <string name="info9"> Så vem bestämmer då hur stor löneförhöjning du får nästa år? </string>
    <string name="info9b">Det beror på om din arbetsgivare har tecknat kollektivavtal eller inte.</string>
    <string name="info9c">Förhoppningsvis finns kollektivavtal på din arbetsplats och då är du garanterad en viss höjning.</string>
    <string name="info10"> Men om ditt företag saknar kollektivavtal är det upp till din arbetsgivare att bestämma om du ska få mer pengar eller ej. </string>
    <string name="info11">Inget avtal – inget skydd.</string>
    <string name="empty_list">Inget företag hittades.</string>
    <string name="search_dialog">Söker företag, det kan ta en liten stund...</string>





    <string name="head_arrowImage">head_arrowImage</string>
    <string name="pull_to_refresh">Dra ner för att uppdatera&#8230;</string>
    <string name="release_to_refresh">Släpp för att uppdatera&#8230;</string>
    <string name="loading">Laddar&#8230;</string>
    <string name="footer_loading">Tryck för att ladda mer&#8230;</string>
    <string name="last_updated">"Senast uppdaterad: "</string>


    <string name="bemanning">Bemanningsföretag</string>
    <string name="bensinstation">Bensinstation</string>
    <string name="bevakning">Bevakning och säkerhet</string>
    <string name="bransle">Bränslehantering</string>
    <string name="dackbarning">Däck, Bärning, Bilvård</string>
    <string name="flygbranschen">Flygbranschen</string>
    <string name="gods">Godstransporter</string>
    <string name="hamn">Hamnarbete</string>
    <string name="persontransport">Persontransporter</string>
    <string name="renhallning">Renhållning</string>
    <string name="terminal">Terminal och lager</string>
    <string name="tidnings">Tidnings- och reklamdist.</string>
    <string name="actionbarBransch">Yrken &amp; branscher</string>
    <string name="actionbarSearch">Sök företag</string>
    <string name="searchHint">Sök efter kollektivavtal</string>
    <string name="actionbarInfo">Varför kollektivavtal</string>
    <string name="toast_no_internet">Ingen anslutning till internet</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_toast">Något gick fel, försök igen</string>

</resources>
