<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="#212121"
        >



        <ImageButton
            android:paddingTop="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ibBack"
            android:onClick="ibBack"
            android:background="@drawable/backarrow"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/actionbarInfo"
            android:id="@+id/textView3"
            android:gravity="center_vertical"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ibBack"
            android:layout_toEndOf="@+id/ibBack" />
    </RelativeLayout>


<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/header"
    android:scrollbars="horizontal" android:id="@+id/ScrollView">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
   >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Varför kollektivavtal?"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textView4"
        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
    android:text="@string/info"
    android:textSize="20sp"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info2"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info3"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info4"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info5"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info6"
        android:textSize="20sp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Den svenska modellen"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info7"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/info7b"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info8"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info8b"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info8c"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inget avtal - inga garantier"
        android:textSize="25sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info9"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info9b"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info9c"
        android:textSize="20sp"

        />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="15dp"
    android:text="@string/info10"
    android:textSize="20sp"

    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:text="@string/info11"
        android:textSize="20sp"

        />

</LinearLayout>

    </ScrollView>

</RelativeLayout>