<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="#212121"
        >


        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/arrow"
            android:onClick="ibBack"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/ibBack"
            android:layout_toRightOf="@+id/ibBack"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/actionbarBransch"
            android:textColor="#fff"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:background="@drawable/button_custom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"

                android:gravity="center"
                android:onClick="bemanningButton"
                android:orientation="horizontal">


                <TextView

                    android:id="@+id/tvBemanning"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:text="@string/bemanning"
                    android:textColor="#fff"
                    android:textSize="23sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="bensinstationButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvBensinstation"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/bensinstation"
                    android:textColor="#fff"
                    android:textSize="23sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="bevakningButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvBevakning"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/bevakning"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="branslehanteringButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvBransle"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/bransle"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="dackbargningButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvDackbarning"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/dackbarning"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="flygbranschenButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvFlygbransch"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/flygbranschen"
                    android:textColor="#fff"
                    android:textSize="23sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="godsButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvGodstransport"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/gods"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="hamnarbeteButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvHamnarbete"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/hamn"
                    android:textColor="#fff"
                    android:textSize="23sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="persontransButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvPersontransport"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/persontransport"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="renhallningButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvRenhallning"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/renhallning"
                    android:textColor="#fff"
                    android:textSize="23sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="terminalButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvTerminallager"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/terminal"
                    android:textColor="#fff"
                    android:textSize="22sp"

                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="tidningButton"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvTidning"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:paddingLeft="15dp"
                    android:text="@string/tidnings"
                    android:textColor="#fff"
                    android:textSize="22sp"

                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>